package BehaviorTree;

import "google/protobuf/csharp_options.proto";

message Person
{
	required int32 num = 1;
	optional int32 age = 2;
};

message Group
{
	repeated Person persons = 1;
};